# internal/api/api_servicer.go
@@ -4,6 +4,7 @@ import (
 	"encoding/json"
 	"errors"
 	"fmt"
+	"log"
 	"net/http"
 	"strconv"
 	"time"
@@ -13,33 +14,50 @@ import (
 	"github.com/lukechannings/gesha/internal/temp"
 )
 
-// DefaultAPIService is a service that implents the logic for the DefaultAPIServicer
-// This service should implement the business logic for every endpoint for the DefaultApi API.
+// Servicer defines the api actions for the DefaultApi service
+// This interface intended to stay up to date with the openapi yaml used to generate it,
+// while the service implementation can ignored with the .openapi-generator-ignore file
+// and updated with the logic required for the API.
+type Servicer interface {
+	GetConfig() (interface{}, error)
+	GetPidRunning() (interface{}, error)
+	GetPidOutput() (interface{}, error)
+	GetStreamPidOutput(w http.ResponseWriter, r *http.Request)
+	GetStreamTempCurrent(w http.ResponseWriter, r *http.Request)
+	GetTemp(string) (interface{}, error)
+	GetTempTarget() (interface{}, error)
+	PostConfig(config.Config) (interface{}, error)
+	PostPidRunning(PIDEnabled) (interface{}, error)
+	PostTempTarget(TemperatureTarget) (interface{}, error)
+}
+
+// Service is a service that implents the logic for the Servicer
+// This service should implement the business logic for every endpoint for the API.
 // Include any external packages or services that will be required by this service.
-type DefaultAPIService struct {
+type Service struct {
 	c  *config.Config
 	t  *temp.Handle
 	p  *pid.Handle
 	ts *chan temp.Temp
 }
 
-// NewDefaultAPIService creates a default api service
-func NewDefaultAPIService(c *config.Config, t *temp.Handle, p *pid.Handle, ts *chan temp.Temp) DefaultAPIServicer {
-	return &DefaultAPIService{c: c, t: t, p: p, ts: ts}
+// NewAPIService creates a default api service
+func NewAPIService(c *config.Config, t *temp.Handle, p *pid.Handle, ts *chan temp.Temp) Servicer {
+	return &Service{c: c, t: t, p: p, ts: ts}
 }
 
 // GetConfig - Returns the running config
-func (s *DefaultAPIService) GetConfig() (interface{}, error) {
+func (s *Service) GetConfig() (interface{}, error) {
 	return s.c, nil
 }
 
 // GetPidRunning - Your GET endpoint
-func (s *DefaultAPIService) GetPidRunning() (interface{}, error) {
+func (s *Service) GetPidRunning() (interface{}, error) {
 	return PIDEnabled{Running: s.p.Running, Heating: s.p.Heating}, nil
 }
 
 // GetPidOutput - Your GET endpoint
-func (s *DefaultAPIService) GetPidOutput() (interface{}, error) {
+func (s *Service) GetPidOutput() (interface{}, error) {
 	if s.p.Running {
 		output := <-*s.p.Output
 		return output, nil
@@ -49,7 +67,7 @@ func (s *DefaultAPIService) GetPidOutput() (interface{}, error) {
 }
 
 // GetStreamPidOutput - Your GET endpoint
-func (s *DefaultAPIService) GetStreamPidOutput(w http.ResponseWriter, r *http.Request) {
+func (s *Service) GetStreamPidOutput(w http.ResponseWriter, r *http.Request) {
 	sampleRate := s.c.PidFrequency
 	flusher, ok := w.(http.Flusher)
 	if !ok {
@@ -66,7 +84,6 @@ func (s *DefaultAPIService) GetStreamPidOutput(w http.ResponseWriter, r *http.Re
 	h.Set("connection", "keep-alive")
 	h.Set("cache-control", "no-cache")
 	h.Set("content-type", "text/event-stream")
-	h.Set("access-control-allow-origin", "*")
 
 	ticker := time.NewTicker(sampleRate)
 	defer ticker.Stop()
@@ -95,14 +112,14 @@ func (s *DefaultAPIService) GetStreamPidOutput(w http.ResponseWriter, r *http.Re
 }
 
 // GetStreamTempCurrent - Your GET endpoint
-func (s *DefaultAPIService) GetStreamTempCurrent(w http.ResponseWriter, r *http.Request) {
+func (s *Service) GetStreamTempCurrent(w http.ResponseWriter, r *http.Request) {
 	query := r.URL.Query()
 	var sampleRate time.Duration
 
 	if sampleRateMsQuery, ok := query["sampleRateMs"]; ok {
 		parsedSampleRate, err := strconv.ParseInt(sampleRateMsQuery[0], 10, 32)
 		if err != nil {
-			fmt.Println("Could not parse sampleRateMs from query string")
+			log.Println("Could not parse sampleRateMs from query string")
 		}
 		sampleRate = time.Duration(parsedSampleRate) * time.Millisecond
 	}
@@ -120,7 +137,6 @@ func (s *DefaultAPIService) GetStreamTempCurrent(w http.ResponseWriter, r *http.
 	h.Set("connection", "keep-alive")
 	h.Set("cache-control", "no-cache")
 	h.Set("content-type", "text/event-stream")
-	h.Set("access-control-allow-origin", "*")
 
 	ticker := time.NewTicker(sampleRate)
 	defer ticker.Stop()
@@ -145,24 +161,24 @@ func (s *DefaultAPIService) GetStreamTempCurrent(w http.ResponseWriter, r *http.
 }
 
 // GetTemp - Your GET endpoint
-func (s *DefaultAPIService) GetTemp(unit string) (interface{}, error) {
+func (s *Service) GetTemp(unit string) (interface{}, error) {
 	return s.t.Get(s.c.TemperatureUnit)
 }
 
 // GetTempTarget - Your GET endpoint
-func (s *DefaultAPIService) GetTempTarget() (interface{}, error) {
+func (s *Service) GetTempTarget() (interface{}, error) {
 	return TemperatureTarget{Target: s.c.TemperatureTarget}, nil
 }
 
 // PostConfig -
-func (s *DefaultAPIService) PostConfig(config config.Config) (interface{}, error) {
+func (s *Service) PostConfig(config config.Config) (interface{}, error) {
 	// TODO - update PostConfig with the required logic for this service method.
 	// Add api_default_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
 	return nil, errors.New("service method 'PostConfig' not implemented")
 }
 
 // PostPidRunning -
-func (s *DefaultAPIService) PostPidRunning(pidEnabled PIDEnabled) (interface{}, error) {
+func (s *Service) PostPidRunning(pidEnabled PIDEnabled) (interface{}, error) {
 	if pidEnabled.Running {
 		s.p.Start(s.c)
 	} else {
@@ -173,7 +189,7 @@ func (s *DefaultAPIService) PostPidRunning(pidEnabled PIDEnabled) (interface{}, 
 }
 
 // PostTempTarget -
-func (s *DefaultAPIService) PostTempTarget(temperatureTarget TemperatureTarget) (interface{}, error) {
+func (s *Service) PostTempTarget(temperatureTarget TemperatureTarget) (interface{}, error) {
 	s.c.TemperatureTarget = temperatureTarget.Target
 
 	if s.p.Running {
